--- a/index.html
+++ b/index.html
@@ -13,31 +13,44 @@
 
 </head>
 
-<body>
-  <div class="contacts-wrapper" id="contacts">
-    <div class="contacts-display" id="links">
-      <div class="contact-links">
-        <a href="https://github.com/jowail" target="_blank" class="fa-brands fa-github"></a>
-        <a href="https://www.instagram.com/kurohgami/?hl=en" target="_blank" class="fa-brands fa-instagram"></a>
-        <a href="https://www.linkedin.com/in/jo0815wu/" target="_blank" class="fa-brands fa-linkedin"></a>
-      </div>
 
-      <div class="left-bar"></div>
-    </div>
-    <div class="contacts-display" id="email">
-      <div class="contact-email">jo0815wu@gmail.com</div>
-      <div class="right-bar"></div>
+<body>
+  <div class="nav-wrapper">
+    <div class="nav-container">
+      <a href="#home" class="fa-solid fa-house"></a>
+      <div class="menu-container">
+        01.<a href="">About</a>
+      </div>
     </div>
 
   </div>
 
-  <div class="header-section">
+  <div class="contacts-display" id="links">
+    <div class="contact-links">
+      <a href="https://github.com/jowail" target="_blank" class="fa-brands fa-github"></a>
+      <a href="https://www.instagram.com/kurohgami/?hl=en" target="_blank" class="fa-brands fa-instagram"></a>
+      <a href="https://www.linkedin.com/in/jo0815wu/" target="_blank" class="fa-brands fa-linkedin"></a>
+    </div>
+    <div class="left-bar"></div>
+  </div>
+
+  </div>
+  <div class="contacts-display" id="email">
+    <div class="contact-email">jo0815wu@gmail.com</div>
+    <div class="right-bar"></div>
+  </div>
+
+  </div>
+
+  <div class="header-section" id="home">
     <div class="header-wrapper vertical-center">
       <h2>Hello, my name is</h2>
       <h1>Jo Wu.</h1>
       <h3>Student, coder, designer.</h3>
-      <p>I'm a full time 3rd Year Computer Science student with a passion for all things code related. I'm
+      <p>I'm a full time <span style="color:var(--bright-blue)">3rd Year Computer Science student</span> with a passion
+        for all things code related. I'm
         always curious. I look to challenge myself and learn along the way.</p>
+
     </div>
 
 
