--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
 
 
 <body>
-  <div class="nav-wrapper">
+  <div class="nav-wrapper" id="navbar">
     <div class="nav-container">
-      <a href="#home" class="fa-solid fa-house"></a>
+      <a href="#home" class="fa-solid fa-house fa-xl" id="move_in_page" style="margin-top:23px;"></a>
       <div class="menu-container">
-        01.<a href="">About</a>
+        <a href="" class="menu-item"><span class="menu-number">01.</span>About</a>
+        <a href="" class="menu-item"><span class="menu-number">02.</span>Works</a>
+        <a href="" class="menu-item"><span class="menu-number">03.</span>Contact</a>
+        <button href="" class="button resume">Resume</button>
+
       </div>
     </div>
-
   </div>
 
   <div class="contacts-display" id="links">
@@ -39,7 +42,6 @@
     <div class="contact-email">jo0815wu@gmail.com</div>
     <div class="right-bar"></div>
   </div>
-
   </div>
 
   <div class="header-section" id="home">
@@ -59,6 +61,8 @@
 
   <div class="header-section">a</div>
 </body>
+<script src="script.js"></script>
 <script src="https://kit.fontawesome.com/51a53d6ea0.js" crossorigin="anonymous"></script>
+
 
 </html>
