started about section

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     <div class="nav-container">
       <a href="#home" class="fa-solid fa-house fa-xl" id="move_in_page" style="margin-top:23px;"></a>
       <div class="menu-container">
-        <a href="" class="menu-item"><span class="menu-number">01.</span>About</a>
-        <a href="" class="menu-item"><span class="menu-number">02.</span>Works</a>
-        <a href="" class="menu-item"><span class="menu-number">03.</span>Contact</a>
-        <button href="" class="button resume">Resume</button>
+        <a href="#about" class="menu-item" id="move_in_page"><span class="menu-number">01.</span>About</a>
+        <a href="" class="menu-item" id="move_in_page"><span class="menu-number">02.</span>Works</a>
+        <a href="" class="menu-item" id="move_in_page"><span class="menu-number">03.</span>Contact</a>
+        <a href="assets/Resume.pdf" target="_blank"><button class="button resume">Resume</button></a>
+
 
       </div>
     </div>
@@ -50,16 +51,48 @@
       <h1>Jo Wu.</h1>
       <h3>Student, coder, designer.</h3>
       <p>I'm a full time <span style="color:var(--bright-blue)">3rd Year Computer Science student</span> with a passion
-        for all things code related. I'm
-        always curious. I look to challenge myself and learn along the way.</p>
-
+        for all things code and design related. I look to challenge myself and learn along the way. </p>
+      <div class="quote-wrapper">
+        <div class="quote">
+          <div class="quotebox">
+            Love <span class="quote-white">what you do;<br>Do what you</span> love.
+          </div>
+          <h4>&mdash; Wayne W. Dyer</h4>
+        </div>
+      </div>
     </div>
-
-
 
   </div>
 
-  <div class="header-section">a</div>
+
+  <div class="about-section">
+
+    <div class="headings">
+      <span class="headings-number">01.</span>
+      <span class="headings-title">About Me</span>
+      <div class="headings-line"></div>
+
+    </div>
+
+    <div class="about-content" id="about">
+      <div class="about-text">
+        Hello! My name is Jo, I consider myself a designer and a coder. Because of computer games I was always intrigued
+        by the engineering of said programs and applications. Although I thoroughly enjoyed art and deisgn since I was a
+        toddler, I chose to pursue Computer Science.<br><br>
+        Throughout my courses I have realised that art and
+        coding aren't contrasts (as I had thought); both require me to start with a base and build up to a rewarding
+        product I design. <br><br>
+
+
+        I am currently planning to make
+        a Chrome Extension and a Pokedex search using PokeAPI!
+
+      </div>
+      <img src="assets/temp.jpg" />
+
+
+    </div>
+  </div>
 </body>
 <script src="script.js"></script>
 <script src="https://kit.fontawesome.com/51a53d6ea0.js" crossorigin="anonymous"></script>
