finished main content of website

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <a href="#home" class="nav-colour-slide fa-solid fa-house fa-xl" id="move_in_page"></a>
       <div class=" menu-container">
         <a href="#about" class="menu-item" id="move_in_page"><span class="menu-number">01.</span>About</a>
-        <a href="" class="menu-item" id="move_in_page"><span class="menu-number">02.</span>Works</a>
-        <a href="" class="menu-item" id="move_in_page"><span class="menu-number">03.</span>Contact</a>
+        <a href="#works" class="menu-item" id="move_in_page"><span class="menu-number">02.</span>Works</a>
+        <a href="#contact" class="menu-item" id="move_in_page"><span class="menu-number">03.</span>Contact</a>
         <a href="assets/Resume.pdf" target="_blank"><button class="button resume">Resume</button></a>
       </div>
     </div>
@@ -38,7 +38,7 @@
 
   </div>
   <div class="contacts-display" id="email">
-    <div class="contact-email">jo0815wu@gmail.com</div>
+    <a class="contact-email" href="mailto:jo0815wu@gmail.com">jo0815wu@gmail.com</a>
     <div class="right-bar"></div>
   </div>
   </div>
@@ -116,20 +116,75 @@
 
         </div>
       </div>
-
-
-
     </div>
   </div>
 
-  <div class="works-section">
+  <div class="works-section" id="works">
     <div class="headings">
       <span class="headings-number">02.</span>
       <span class="headings-title">Things I have worked on</span>
       <div class="headings-line"></div>
     </div>
+
+    <div class="work">
+      <div class="work-img"><img src="assets/portfolio_website.png"> </div>
+      <div class="work-description">
+        <h3>Featured Project</h3>
+        <h1>Portfolio Website</h1>
+        <div class="description-box">
+          Furthering my HTML, CSS and JavaScript skills I decided to build this website to be a portfolio which is more
+          clean and profession than my last.<br>This website's design is by <a
+            href="https://brittanychiang.com/">Brittany
+            Chang</a>.
+        </div>
+        <p style="padding-top: 170px">HTML CSS JavaScript</p>
+        <a href="https://github.com/jowail/jowu_portfolio" target="_blank" class="fa-solid fa-code link-icon"></a>
+        <a href="https://jowail.github.io/jowu_portfolio/" target="_blank" class="fa-solid fa-link link-icon"></a>
+      </div>
+    </div>
+
+    <div class="work">
+      <div class="work-description" style="justify-content: left; text-align: left;">
+        <h3>Featured Project</h3>
+        <h1>Personal Profile Website</h1>
+        <div class=" description-box" style="left:0;">
+          My first website where I first self-learnt HTML, CSS & JavaScript. I built the site to showcase like a profile
+          page while learning and practising the languages.
+        </div>
+        <p>HTML CSS JavaScript</p>
+        <a href="https://github.com/jowail/my-page" target="_blank" class="fa-solid fa-code link-icon"></a>
+        <a href="https://jowail.github.io/my-page/" target="_blank" class="fa-solid fa-link link-icon"></a>
+      </div>
+      <div class="work-img"><img src="assets/profile_website.gif"> </div>
+    </div>
+
+    <div class="work">
+      <div class="work-img"><img src="assets/logger.png"> </div>
+      <div class="work-description">
+        <h3>Small Project</h3>
+        <h1>Key + Image Logger</h1>
+        <div class="description-box">
+          A program which logs and sends all keystrokes to
+          an email. This program also sends anything copied to clipboard, including images.
+        </div>
+        <p>Python</p>
+        <a href="https://github.com/jowail/keylogger" target="_blank" class="fa-solid fa-code link-icon"></a>
+      </div>
+    </div>
+
   </div>
 
+  <div class="contact-section" id="contact">
+    <div class="contact-title"><span style="font-size: 14px;">0.3</span> What's next?</div>
+    <h1>Contact Me</h1>
+    As an aspiring student, if you have any suggestions or ideas I could further my skills with let me know! Or if you
+    want to say hi, that would be highly welcome!<br>
+    <a href="mailto:jo0815wu@gmail.com"><button class="contact-button">Say Hello</button></a>
+  </div>
+
+  <div class="footer">
+    Built by Jo Wu & Designed by Brittany Chiang
+  </div>
 
 </body>
 <script src="script.js"></script>
