--- a/index.html
+++ b/index.html
@@ -13,182 +13,207 @@
 
 </head>
 
+<body onload="myFunction()" style="margin:0;">
+  <div class="loader-wrapper" id="loader">
+    <div class="console-container" id="load-text" style="flex-direction: column;" onload="loader_disappear()">
+      <span id='text'></span>
+      <div class='console-underscore' id='console'>&#95;</div>
+    </div>
+  </div>
 
-<body>
-  <div class="nav-wrapper" id="navbar">
-    <div class="nav-container">
-      <a href="#home" class="nav-colour-slide fa-solid fa-house fa-xl" id="move_in_page"></a>
-      <div class=" menu-container">
-        <a href="#about" class="menu-item" id="move_in_page"><span class="menu-number">01.</span>About</a>
-        <a href="#works" class="menu-item" id="move_in_page"><span class="menu-number">02.</span>Works</a>
-        <a href="#contact" class="menu-item" id="move_in_page"><span class="menu-number">03.</span>Contact</a>
-        <a href="assets/Resume.pdf" target="_blank"><button class="button resume">Resume</button></a>
+
+
+  <div style="display:none;" id="myDiv">
+    <div class="nav-wrapper" id="navbar">
+      <div class="nav-container">
+        <div class="home">
+          <a href="#home" class="nav-colour-slide fa-solid fa-house fa-xl" id="move_in_page"
+            style="padding-top: 20px"></a>
+        </div>
+
+        <div class=" menu-container">
+          <a href="#about">
+            <div class="menu-item" id="about-nav"><span class="menu-number">01.</span>About</div>
+          </a>
+          <a href="#works">
+            <div class="menu-item" id="work-nav"><span class="menu-number">02.</span>Works</div>
+          </a>
+          <a href="#contact">
+            <div class="menu-item" id="contact-nav"><span class="menu-number">03.</span>Contact</div>
+          </a>
+          <a href="assets/Resume.pdf" target="_blank">
+            <div class="button resume" id="resume-nav"><button>Resume</button></div>
+          </a>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="contacts-display" id="links">
-    <div class="contact-links">
-      <a href="https://github.com/jowail" target="_blank" class="fa-brands fa-github"></a>
-      <a href="https://www.instagram.com/kurohgami/?hl=en" target="_blank" class="fa-brands fa-instagram"></a>
-      <a href="https://www.linkedin.com/in/jo0815wu/" target="_blank" class="fa-brands fa-linkedin"></a>
+    <div class="contacts-display" id="links">
+      <div class="contact-links">
+        <a href="https://github.com/jowail" target="_blank" class="fa-brands fa-github"></a>
+        <a href="https://www.instagram.com/kurohgami/?hl=en" target="_blank" class="fa-brands fa-instagram"></a>
+        <a href="https://www.linkedin.com/in/jo0815wu/" target="_blank" class="fa-brands fa-linkedin"></a>
+      </div>
+      <div class="left-bar"></div>
     </div>
-    <div class="left-bar"></div>
-  </div>
 
-  </div>
-  <div class="contacts-display" id="email">
-    <a class="contact-email" href="mailto:jo0815wu@gmail.com">jo0815wu@gmail.com</a>
-    <div class="right-bar"></div>
-  </div>
-  </div>
+    <div class="contacts-display" id="email">
+      <a class="contact-email" href="mailto:jo0815wu@gmail.com">jo0815wu@gmail.com</a>
+      <div class="right-bar"></div>
+    </div>
 
-  <div class="header-section" id="home">
-    <div class="header-wrapper vertical-center">
-      <h2>Hello, my name is</h2>
-      <h1>Jo Wu</h1>
-      <h3>A part-time
-        <div class="text-scroller">
-          <span>
-            student.<br /> coder.<br /> designer.
-          </span>
-        </div>
-      </h3>
-      <p>I'm a full time <span style="color:var(--bright-blue)">3rd Year Computer Science student</span> with a passion
-        for all things code and design related. I look to challenge myself and learn along the way. </p>
-      <div class="quote-wrapper">
-        <div class="quote">
-          <div class="quotebox">
-            Love <span class="quote-white">what you do;<br>Do what you</span> love.
+    <div class="header-section" id="home">
+      <div class="header-wrapper vertical-center">
+        <div class="title1">Hello, my name is</div>
+        <div class="title2">Jo Wu</div>
+        <div class="title3">A part-time
+          <div class="text-scroller">
+            <span>
+              student.<br /> coder.<br /> designer.
+            </span>
           </div>
-          <h4>&mdash; Wayne W. Dyer</h4>
         </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="about-section" id="about">
-    <div class="headings">
-      <span class="headings-number">01.</span>
-      <span class="headings-title">About Me</span>
-      <div class="headings-line"></div>
-    </div>
-
-    <div class="about-content">
-      <div class="about-text">
-        Hello! My name is Jo, I consider myself a designer and a coder. Although I thoroughly enjoyed art and deisgn
-        since I was a toddler, I chose to pursue Computer Science. Because of computer games I was always intrigued
-        by the engineering of said programs and applications.<br><br>
-        Throughout my courses I have realised that art and coding are not contrasts (as I had thought); both require me
-        to <span style="color:var(--bright-blue)">start with a base and build up to a rewarding product </span>I design.
-        As such, I currently have the privilege to work for a small business as a <span
-          style="color:var(--bright-blue)">casual website designer</span>
-        while studying and working on personal projects.<br><br>At the moment, I am planning to make a <span
-          style="color:var(--bright-blue)">Chrome Extension</span> and an
-        aesthetic and smooth Pokedex search using
-        <span style="color:var(--bright-blue)">PokeAPI</span>!
-
-      </div>
-      <div class="about-right">
-        <img src="assets/temp.jpg" id="about-img" />
-        <div class="about-img-cover"></div>
-        <div class="about-box"></div>
-        <div class="skills-title">Skills: <span style="font-size: 10px;">(most proficient ones)</span></div>
-
-        <div class="skills-container">
-          <div class="skill-bullet"></div>
-          <div class="skill-name">Python</div>
-          <div class="skill-bar">
-            <div class="skill-progress" style="width: 160px"></div>
+        <div class="title4">I'm a full time <span style="color:var(--bright-blue)">3rd Year Computer Science
+            student</span> with a
+          passion
+          for all things code and design related. I look to challenge myself and learn along the way. </div>
+        <div class="quote-wrapper">
+          <div class="quote">
+            <div class="quotebox">
+              Love <span class="quote-white">what you do;<br>Do what you</span> love.
+            </div>
+            <h4>&mdash; Wayne W. Dyer</h4>
           </div>
+        </div>
+      </div>
+    </div>
 
-          <div class="skill-bullet"></div>
-          <div class="skill-name">HTML & CSS</div>
-          <div class="skill-bar">
-            <div class="skill-progress" style="width: 140px"></div>
+    <div class="about-section reveal" id="about">
+      <div class="headings">
+        <span class="headings-number">01.</span>
+        <span class="headings-title">About Me</span>
+        <div class="headings-line"></div>
+      </div>
+
+      <div class="about-content">
+        <div class="about-text">
+          Hello! My name is Jo, I consider myself a designer and a coder. Although I thoroughly enjoyed art and deisgn
+          since I was a toddler, I chose to pursue Computer Science. Because of computer games I was always intrigued
+          by the engineering of said programs and applications.<br><br>
+          Throughout my courses I have realised that art and coding are not contrasts (as I had thought); both require
+          me
+          to <span style="color:var(--bright-blue)">start with a base and build up to a rewarding product </span>I
+          design.
+          As such, I currently have the privilege to work for a small business as a <span
+            style="color:var(--bright-blue)">casual website designer</span>
+          while studying and working on personal projects.<br><br>At the moment, I am planning to make a <span
+            style="color:var(--bright-blue)">Chrome Extension</span> and an
+          aesthetic and smooth Pokedex search using
+          <span style="color:var(--bright-blue)">PokeAPI</span>!
+
+        </div>
+        <div class="about-right">
+          <img src="assets/temp.jpg" id="about-img" />
+          <div class="about-img-cover"></div>
+          <div class="about-box"></div>
+          <div class="skills-title">Skills: <span style="font-size: 10px;">(most proficient ones)</span></div>
+
+          <div class="skills-container">
+            <div class="skill-bullet"></div>
+            <div class="skill-name">Python</div>
+            <div class="skill-bar">
+              <div class="skill-progress" style="width: 160px"></div>
+            </div>
+
+            <div class="skill-bullet"></div>
+            <div class="skill-name">HTML & CSS</div>
+            <div class="skill-bar">
+              <div class="skill-progress" style="width: 140px"></div>
+            </div>
+
+            <div class="skill-bullet"></div>
+            <div class="skill-name">JavaScript</div>
+            <div class="skill-bar">
+              <div class="skill-progress" style="width: 100px"></div>
+            </div>
+
           </div>
+        </div>
+      </div>
+    </div>
 
-          <div class="skill-bullet"></div>
-          <div class="skill-name">JavaScript</div>
-          <div class="skill-bar">
-            <div class="skill-progress" style="width: 100px"></div>
+    <div class="works-section" id="works">
+      <div class="headings reveal">
+        <span class="headings-number">02.</span>
+        <span class="headings-title">Things I have worked on</span>
+        <div class="headings-line"></div>
+      </div>
+
+      <div class="work reveal">
+        <div class="work-img"><img src="assets/portfolio_website.png"> </div>
+        <div class="work-description">
+          <h3>Featured Project</h3>
+          <h1>Portfolio Website</h1>
+          <div class="description-box">
+            Furthering my HTML, CSS and JavaScript skills I decided to build this website to be a portfolio which is
+            more
+            clean and profession than my last.
           </div>
-
+          <p style="padding-top: 170px">HTML CSS JavaScript</p>
+          <a href="https://github.com/jowail/jowu_portfolio" target="_blank" class="fa-solid fa-code link-icon"></a>
+          <a href="https://jowail.github.io/jowu_portfolio/" target="_blank" class="fa-solid fa-link link-icon"></a>
         </div>
       </div>
-    </div>
-  </div>
 
-  <div class="works-section" id="works">
-    <div class="headings">
-      <span class="headings-number">02.</span>
-      <span class="headings-title">Things I have worked on</span>
-      <div class="headings-line"></div>
-    </div>
-
-    <div class="work">
-      <div class="work-img"><img src="assets/portfolio_website.png"> </div>
-      <div class="work-description">
-        <h3>Featured Project</h3>
-        <h1>Portfolio Website</h1>
-        <div class="description-box">
-          Furthering my HTML, CSS and JavaScript skills I decided to build this website to be a portfolio which is more
-          clean and profession than my last.<br>This website's design is by <a
-            href="https://brittanychiang.com/">Brittany
-            Chang</a>.
+      <div class="work reveal">
+        <div class="work-description" style="justify-content: left; text-align: left;">
+          <h3>Featured Project</h3>
+          <h1>Personal Profile Website</h1>
+          <div class=" description-box" style="left:0;">
+            My first website where I first self-learnt HTML, CSS & JavaScript. I built the site to showcase like a
+            profile
+            page while learning and practising the languages.
+          </div>
+          <p>HTML CSS JavaScript</p>
+          <a href="https://github.com/jowail/my-page" target="_blank" class="fa-solid fa-code link-icon"></a>
+          <a href="https://jowail.github.io/my-page/" target="_blank" class="fa-solid fa-link link-icon"></a>
         </div>
-        <p style="padding-top: 170px">HTML CSS JavaScript</p>
-        <a href="https://github.com/jowail/jowu_portfolio" target="_blank" class="fa-solid fa-code link-icon"></a>
-        <a href="https://jowail.github.io/jowu_portfolio/" target="_blank" class="fa-solid fa-link link-icon"></a>
+        <div class="work-img"><img src="assets/profile_website.gif"> </div>
       </div>
+
+      <div class="work reveal">
+        <div class="work-img"><img src="assets/logger.png"> </div>
+        <div class="work-description">
+          <h3>Small Project</h3>
+          <h1>Key + Image Logger</h1>
+          <div class="description-box">
+            A program which logs and sends all keystrokes to
+            an email. This program also sends anything copied to clipboard, including images.
+          </div>
+          <p>Python</p>
+          <a href="https://github.com/jowail/keylogger" target="_blank" class="fa-solid fa-code link-icon"></a>
+        </div>
+      </div>
+
     </div>
 
-    <div class="work">
-      <div class="work-description" style="justify-content: left; text-align: left;">
-        <h3>Featured Project</h3>
-        <h1>Personal Profile Website</h1>
-        <div class=" description-box" style="left:0;">
-          My first website where I first self-learnt HTML, CSS & JavaScript. I built the site to showcase like a profile
-          page while learning and practising the languages.
-        </div>
-        <p>HTML CSS JavaScript</p>
-        <a href="https://github.com/jowail/my-page" target="_blank" class="fa-solid fa-code link-icon"></a>
-        <a href="https://jowail.github.io/my-page/" target="_blank" class="fa-solid fa-link link-icon"></a>
-      </div>
-      <div class="work-img"><img src="assets/profile_website.gif"> </div>
+    <div class="contact-section reveal" id="contact">
+      <div class="contact-title"><span style="font-size: 14px;">0.3</span> What's next?</div>
+      <h1>Contact Me</h1>
+      As an aspiring student, if you have any suggestions or ideas I could further my skills with let me know! Or if you
+      want to say hi, that would be highly welcome!<br>
+      <a href="mailto:jo0815wu@gmail.com"><button class="contact-button">Say Hello</button></a>
     </div>
 
-    <div class="work">
-      <div class="work-img"><img src="assets/logger.png"> </div>
-      <div class="work-description">
-        <h3>Small Project</h3>
-        <h1>Key + Image Logger</h1>
-        <div class="description-box">
-          A program which logs and sends all keystrokes to
-          an email. This program also sends anything copied to clipboard, including images.
-        </div>
-        <p>Python</p>
-        <a href="https://github.com/jowail/keylogger" target="_blank" class="fa-solid fa-code link-icon"></a>
-      </div>
+    <div class="footer">
+      Built by Jo Wu & Designed by Brittany Chiang
     </div>
 
   </div>
-
-  <div class="contact-section" id="contact">
-    <div class="contact-title"><span style="font-size: 14px;">0.3</span> What's next?</div>
-    <h1>Contact Me</h1>
-    As an aspiring student, if you have any suggestions or ideas I could further my skills with let me know! Or if you
-    want to say hi, that would be highly welcome!<br>
-    <a href="mailto:jo0815wu@gmail.com"><button class="contact-button">Say Hello</button></a>
-  </div>
-
-  <div class="footer">
-    Built by Jo Wu & Designed by Brittany Chiang
-  </div>
-
 </body>
 <script src="script.js"></script>
 <script src="https://kit.fontawesome.com/51a53d6ea0.js" crossorigin="anonymous"></script>
+
 
 
 </html>
