--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body onload="myFunction()" style="margin:0;">
+<body onload="render()" style="margin:0;">
   <div class="loader-wrapper" id="loader">
     <div class="console-container" id="load-text" style="flex-direction: column;" onload="loader_disappear()">
       <span id='text'></span>
@@ -21,9 +21,7 @@
     </div>
   </div>
 
-
-
-  <div style="display:none;" id="myDiv">
+  <div style="display:none;" id="page">
     <div class="nav-wrapper" id="navbar">
       <div class="nav-container">
         <div class="home">
