made header responsive

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
 
     <div class="about-section reveal" id="about">
-      <div class="headings">
+      <div class="headings" id="about-heading">
         <span class="headings-number">01.</span>
         <span class="headings-title">About Me</span>
         <div class="headings-line"></div>
@@ -120,19 +120,19 @@
             <div class="skill-bullet"></div>
             <div class="skill-name">Python</div>
             <div class="skill-bar">
-              <div class="skill-progress" style="width: 160px"></div>
+              <div class="skill-progress" style="width: 80%"></div>
             </div>
 
             <div class="skill-bullet"></div>
             <div class="skill-name">HTML & CSS</div>
             <div class="skill-bar">
-              <div class="skill-progress" style="width: 140px"></div>
+              <div class="skill-progress" style="width: 70%"></div>
             </div>
 
             <div class="skill-bullet"></div>
             <div class="skill-name">JavaScript</div>
             <div class="skill-bar">
-              <div class="skill-progress" style="width: 100px"></div>
+              <div class="skill-progress" style="width: 50%"></div>
             </div>
 
           </div>
