--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
           by the engineering of said programs and applications.<br><br>
           Throughout my courses I have realised that art and coding are not contrasts (as I had thought); both require
           me
-          to <span style="color:var(--bright-blue)">start with a base and build up to a rewarding product </span>I
-          design.
+          to <span style="color:var(--bright-blue)">start with a base and build up to a self rewarding product </span>.
           As such, I currently have the privilege to work for a small business as a <span
             style="color:var(--bright-blue)">casual website designer</span>
           while studying and working on personal projects.<br><br>At the moment, I am planning to make a <span
