made all but work section responsive

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="nav-container">
         <div class="home">
           <a href="#home" class="nav-colour-slide fa-solid fa-house fa-xl" id="move_in_page"
-            style="padding-top: 20px"></a>
+            style="padding-top: 25px"></a>
         </div>
 
         <div class=" menu-container">
@@ -203,7 +203,7 @@
     </div>
 
     <div class="footer">
-      Built by Jo Wu & Designed by Brittany Chiang
+      Built by Jo Wu & Designed by <a href="https://brittanychiang.com/">Brittany Chiang</a>
     </div>
 
   </div>
