changed link target

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     </div>
 
     <div class="footer">
-      Built by Jo Wu & Designed by <a href="https://brittanychiang.com/">Brittany Chiang</a>
+      Built by Jo Wu & Designed by <a href="https://brittanychiang.com/" target="_blank">Brittany Chiang</a>
     </div>
 
   </div>
