--- a/index.html
+++ b/index.html
@@ -119,19 +119,25 @@
             <div class="skill-bullet"></div>
             <div class="skill-name">Python</div>
             <div class="skill-bar">
-              <div class="skill-progress" style="width: 80%"></div>
+              <div class="skill-progress" style="width: 90%"></div>
             </div>
 
             <div class="skill-bullet"></div>
             <div class="skill-name">HTML & CSS</div>
             <div class="skill-bar">
-              <div class="skill-progress" style="width: 70%"></div>
+              <div class="skill-progress" style="width: 90%"></div>
             </div>
 
             <div class="skill-bullet"></div>
             <div class="skill-name">JavaScript</div>
             <div class="skill-bar">
-              <div class="skill-progress" style="width: 50%"></div>
+              <div class="skill-progress" style="width: 85%"></div>
+            </div>
+
+            <div class="skill-bullet"></div>
+            <div class="skill-name">React</div>
+            <div class="skill-bar">
+              <div class="skill-progress" style="width: 80%"></div>
             </div>
 
           </div>
