--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <link rel="icon" type="image/x-icon" href="assets/pink_cloud1.png">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-  <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css"
-    rel="stylesheet">
+  <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
   <link rel="stylesheet" href="src/style.css" />
 
 </head>
@@ -25,8 +24,7 @@
     <div class="nav-wrapper" id="navbar">
       <div class="nav-container">
         <div class="home">
-          <a href="#home" class="nav-colour-slide fa-solid fa-house fa-xl" id="move_in_page"
-            style="padding-top: 25px"></a>
+          <a href="#home" class="nav-colour-slide fa-solid fa-house fa-xl" id="move_in_page" style="padding-top: 25px"></a>
         </div>
 
         <div class=" menu-container">
@@ -101,10 +99,8 @@
           Throughout my courses I have realised that art and coding are not contrasts (as I had thought); both require
           me
           to <span style="color:var(--bright-blue)">start with a base and build up to a self rewarding product </span>.
-          As such, I currently have the privilege to work for a small business as a <span
-            style="color:var(--bright-blue)">casual website designer</span>
-          while studying and working on personal projects.<br><br>At the moment, I am planning to make a <span
-            style="color:var(--bright-blue)">Chrome Extension</span> and an
+          As such, I currently have the privilege to work for a small business as a <span style="color:var(--bright-blue)">casual website designer</span>
+          while studying and working on personal projects.<br><br>At the moment, I am planning to make a <span style="color:var(--bright-blue)">Chrome Extension</span> and an
           aesthetic and smooth Pokedex search using
           <span style="color:var(--bright-blue)">PokeAPI</span>!
 
@@ -117,17 +113,15 @@
 
           <div class="skills-container">
             <div class="skill-bullet"></div>
-            <div class="skill-name">Python</div>
-            <div class="skill-bar">
-              <div class="skill-progress" style="width: 90%"></div>
-            </div>
-
-            <div class="skill-bullet"></div>
             <div class="skill-name">HTML & CSS</div>
             <div class="skill-bar">
               <div class="skill-progress" style="width: 90%"></div>
             </div>
-
+            <div class="skill-bullet"></div>
+            <div class="skill-name">Python</div>
+            <div class="skill-bar">
+              <div class="skill-progress" style="width: 85%"></div>
+            </div>
             <div class="skill-bullet"></div>
             <div class="skill-name">JavaScript</div>
             <div class="skill-bar">
@@ -135,7 +129,7 @@
             </div>
 
             <div class="skill-bullet"></div>
-            <div class="skill-name">React</div>
+            <div class="skill-name">ReactJS</div>
             <div class="skill-bar">
               <div class="skill-progress" style="width: 80%"></div>
             </div>
@@ -153,6 +147,20 @@
       </div>
 
       <div class="work reveal">
+        <div class="work-description" style="justify-content: left; text-align: left;">
+          <h3>Featured Project</h3>
+          <h1>Pokedex (PokeAPI)</h1>
+          <div class=" description-box" style="left:0;">
+            Furthering my ReactJS and TypeScript skills I learnt from a univeristy course, I wanted to build a personalised project with something I am passionate about Planning to further expand this app! (2023)
+          </div>
+          <p style="padding-top: 170px">ReactJS TypeScript</p>
+          <a href="https://personalpokedex-one.vercel.app/" target="_blank" class="fa-solid fa-code link-icon"></a>
+          <a href="https://github.com/jowail/pokedex" target="_blank" class="fa-solid fa-link link-icon"></a>
+        </div>
+        <div class="work-img"><img src="assets/pokedex.png"> </div>
+      </div>
+
+      <div class="work reveal">
         <div class="work-img"><img src="assets/portfolio_website.png"> </div>
         <div class="work-description">
           <h3>Featured Project</h3>
@@ -160,7 +168,7 @@
           <div class="description-box">
             Furthering my HTML, CSS and JavaScript skills I decided to build this website to be a portfolio which is
             more
-            clean and profession than my last.
+            clean and profession than my last. (2022)
           </div>
           <p style="padding-top: 170px">HTML CSS JavaScript</p>
           <a href="https://github.com/jowail/jowu_portfolio" target="_blank" class="fa-solid fa-code link-icon"></a>
@@ -175,27 +183,13 @@
           <div class=" description-box" style="left:0;">
             My first website where I first self-learnt HTML, CSS & JavaScript. I built the site to showcase like a
             profile
-            page while learning and practising the languages.
+            page while learning and practising the languages.(2022)
           </div>
           <p>HTML CSS JavaScript</p>
           <a href="https://github.com/jowail/my-page" target="_blank" class="fa-solid fa-code link-icon"></a>
           <a href="https://jowail.github.io/my-page/" target="_blank" class="fa-solid fa-link link-icon"></a>
         </div>
         <div class="work-img"><img src="assets/profile_website.gif"> </div>
-      </div>
-
-      <div class="work reveal">
-        <div class="work-img"><img src="assets/logger.png"> </div>
-        <div class="work-description">
-          <h3>Small Project</h3>
-          <h1>Key + Image Logger</h1>
-          <div class="description-box">
-            A program which logs and sends all keystrokes to
-            an email. This program also sends anything copied to clipboard, including images.
-          </div>
-          <p>Python</p>
-          <a href="https://github.com/jowail/keylogger" target="_blank" class="fa-solid fa-code link-icon"></a>
-        </div>
       </div>
 
     </div>
