--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
           <div class="description-box">
             Furthering my HTML, CSS and JavaScript skills I decided to build this website to be a portfolio which is
             more
-            clean and profession than my last. (2022)
+            clean and professional than my last. (2022)
           </div>
           <p style="padding-top: 170px">HTML CSS JavaScript</p>
           <a href="https://github.com/jowail/jowu_portfolio" target="_blank" class="fa-solid fa-code link-icon"></a>
-          <a href="https://jowail.github.io/jowu_portfolio/" target="_blank" class="fa-solid fa-link link-icon"></a>
+          <a href="https://portfoliowebsite-xi-blue.vercel.app/" target="_blank" class="fa-solid fa-link link-icon"></a>
         </div>
       </div>
 
@@ -187,7 +187,7 @@
           </div>
           <p>HTML CSS JavaScript</p>
           <a href="https://github.com/jowail/my-page" target="_blank" class="fa-solid fa-code link-icon"></a>
-          <a href="https://jowail.github.io/my-page/" target="_blank" class="fa-solid fa-link link-icon"></a>
+          <a href="https://personalprofilepage.vercel.app/" target="_blank" class="fa-solid fa-link link-icon"></a>
         </div>
         <div class="work-img"><img src="assets/profile_website.gif"> </div>
       </div>
