--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
             Furthering my ReactJS and TypeScript skills I learnt from a univeristy course, I wanted to build a personalised project with something I am passionate about Planning to further expand this app! (2023)
           </div>
           <p style="padding-top: 170px">ReactJS TypeScript</p>
-          <a href="https://personalpokedex-one.vercel.app/" target="_blank" class="fa-solid fa-code link-icon"></a>
-          <a href="https://github.com/jowail/pokedex" target="_blank" class="fa-solid fa-link link-icon"></a>
+          <a href="https://github.com/jowail/pokedex" target="_blank" class="fa-solid fa-code link-icon"></a>
+          <a href="https://personalpokedex-one.vercel.app/" target="_blank" class="fa-solid fa-link link-icon"></a>
         </div>
         <div class="work-img"><img src="assets/pokedex.png"> </div>
       </div>
