--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           </div>
           <p style="padding-top: 170px">HTML CSS JavaScript</p>
           <a href="https://github.com/jowail/jowu_portfolio" target="_blank" class="fa-solid fa-code link-icon"></a>
-          <a href="https://portfoliowebsite-xi-blue.vercel.app/" target="_blank" class="fa-solid fa-link link-icon"></a>
+          <a href="https://jowu.vercel.app/" target="_blank" class="fa-solid fa-link link-icon"></a>
         </div>
       </div>
 
