--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 
     <div class="contacts-display" id="links">
       <div class="contact-links">
-        <a href="https://github.com/jowail" target="_blank" class="fa-brands fa-github"></a>
-        <a href="https://www.instagram.com/kurohgami/?hl=en" target="_blank" class="fa-brands fa-instagram"></a>
+        <a href="https://github.com/jowhule" target="_blank" class="fa-brands fa-github"></a>
         <a href="https://www.linkedin.com/in/jo0815wu/" target="_blank" class="fa-brands fa-linkedin"></a>
       </div>
       <div class="left-bar"></div>
@@ -113,25 +112,20 @@
 
           <div class="skills-container">
             <div class="skill-bullet"></div>
-            <div class="skill-name">HTML & CSS</div>
-            <div class="skill-bar">
-              <div class="skill-progress" style="width: 90%"></div>
-            </div>
-            <div class="skill-bullet"></div>
             <div class="skill-name">Python</div>
             <div class="skill-bar">
-              <div class="skill-progress" style="width: 85%"></div>
+              <div class="skill-progress" style="width: 80%"></div>
             </div>
             <div class="skill-bullet"></div>
             <div class="skill-name">JavaScript</div>
             <div class="skill-bar">
-              <div class="skill-progress" style="width: 85%"></div>
+              <div class="skill-progress" style="width: 75%"></div>
             </div>
 
             <div class="skill-bullet"></div>
-            <div class="skill-name">ReactJS</div>
+            <div class="skill-name">ReactTS</div>
             <div class="skill-bar">
-              <div class="skill-progress" style="width: 80%"></div>
+              <div class="skill-progress" style="width: 75%"></div>
             </div>
 
           </div>
