--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="loader-wrapper" id="loader">
     <div class="console-container" id="load-text" style="flex-direction: column;" onload="loader_disappear()">
       <span id='text'></span>
-      <div class='console-underscore' id='console'>&#95;</div>
+      <div class='console-underscore' id='console'></div>
     </div>
   </div>
 
