--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body onload="render()" style="margin:0;">
-  <div class="loader-wrapper" id="loader">
+  <div class="loader-wrapper" style="display: none" id="loader">
     <div class="console-container" id="load-text" style="flex-direction: column;" onload="loader_disappear()">
       <span id='text'></span>
-      <div class='console-underscore' id='console'></div>
+      <div class='console-underscore' id='console'>_</div>
     </div>
   </div>
 
