--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </span>
           </div>
         </div>
-        <div class="title4">I'm a full time <span style="color:var(--bright-blue)">3rd Year Computer Science
+        <div class="title4">I'm a full time <span style="color:var(--bright-blue)">4th Year Computer Science
             student</span> with a
           passion
           for all things code and design related. I look to challenge myself and learn along the way. </div>
