--- a/index.html
+++ b/index.html
@@ -68,10 +68,8 @@
             </span>
           </div>
         </div>
-        <div class="title4">I'm a full time <span style="color:var(--bright-blue)">4th Year Computer Science
-            student</span> with a
-          passion
-          for all things code and design related. I look to challenge myself and learn along the way. </div>
+        <div class="title4">I'm a <span style="color:var(--bright-blue)">Science / Computer Science
+            penultimate student</span> with a passion for problem solving, all things code and design related. I look to challenge myself and learn along the way. </div>
         <div class="quote-wrapper">
           <div class="quote">
             <div class="quotebox">
@@ -99,9 +97,7 @@
           me
           to <span style="color:var(--bright-blue)">start with a base and build up to a self rewarding product </span>.
           As such, I currently have the privilege to work for a small business as a <span style="color:var(--bright-blue)">casual website designer</span>
-          while studying and working on personal projects.<br><br>At the moment, I am planning to make a <span style="color:var(--bright-blue)">Chrome Extension</span> and an
-          aesthetic and smooth Pokedex search using
-          <span style="color:var(--bright-blue)">PokeAPI</span>!
+          while studying and working on personal projects.<br><br>At the moment, I am planning to make an easy to use aesthetic <span style="color:var(--bright-blue)">to do list app</span>!
 
         </div>
         <div class="about-right">
